# fitgirl-decrypt

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: docs.yaml
examples/: request.rs
fitgirl-decrypt/: Cargo.toml  README.md
fitgirl-decrypt/benches/: decryption.rs  new_session.rs
fitgirl-decrypt/src/: crypto.rs  error.rs  lib.rs
fitgirl-decrypt/tests/: request_async.rs
fitgirl-decryptor/: Cargo.toml
fitgirl-decryptor/src/: main.rs
src/: crypto.rs  error.rs  lib.rs  types.rs
tests/: request_async.rs
